# lrmdns

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GITHUB_PUBLICATION_STEPS.md  LICENSE  PERFORMANCE.md  PUBLISH_PLAN.md  README.md  SECURITY.md  TODO.md  lrmdns.yaml  plan.md  queries.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
it/: README.md  run-tests.sh
it/fixtures/configs/: basic-with-api.yaml  basic.yaml  extended-records.yaml
it/fixtures/zones/: basic.zone  extended-records.zone  soa-multiline-comments.zone  soa-multiline-compact.zone  soa-multiline-mixed.zone  soa-single-line.zone  soa-tabs-and-spaces.zone
it/helpers/: assertions  dns  external  pcap  server
it/scripts/: setup-external-suites.sh  validate-setup.sh
it/tests/: 00-setup.bats  01-basic-queries.bats  04-tcp.bats  10-reload.bats  11-metrics.bats  12-error-handling.bats  13-soa-formats.bats  13-tcp-connection-pooling.bats  14-additional-record-types.bats
src/: api.rs  config.rs  dnssec.rs  main.rs  metrics.rs  proptest_helpers.rs  protocol.rs  ratelimit.rs  server.rs  zone.rs
zones/: example.com.zone  wildcard-test.zone
